# pman_rust

./: README.md
pman/: .gitignore
pman/pman/: ContentView.swift  DBView.swift  DraggableDivider.swift  EntityToEditView.swift  EntityView.swift  GroupsView.swift  HeaderView.swift  PasswordView.swift  pmanApp.swift  utils.swift
pman/pman.xcodeproj/: project.pbxproj
pman/pman/model/: Common.swift  Database.swift
pman/pmanTests/: pmanTests.swift
pman/pmanUITests/: pmanUITests.swift  pmanUITestsLaunchTests.swift
pman_android/: .gitignore  local.properties  settings.gradle.kts
pman_android/app/: build.gradle.kts
pman_android/app/src/main/: AndroidManifest.xml
pman_console/: .gitignore  Cargo.toml
pman_console/src/: db_properties.rs  entity_actions.rs  groups_users_actions.rs  main.rs  passwords.rs  utils.rs
pman_lib/: .gitignore  Cargo.toml  build.rs  build.sh
pman_lib/.cargo/: config.toml
pman_lib/src/: crypto.rs  error_builders.rs  lib.rs  pman_database.rs  pman_lib.udl  structs_interfaces.rs
pman_lib/src/keepass/: keepass_database.rs  mod.rs
pman_lib/src/pman/: crypto.rs  data_file.rs  database_entity.rs  entity_map.rs  header_entity.rs  id_name_map.rs  id_value_map.rs  ids.rs  mod.rs  names_file.rs  network.rs  passwords_file.rs  pman_database.rs  pman_database_file.rs
pman_lib/src/pman/data_file/: data_file.rs  data_file_qs3_handler.rs  mod.rs
pman_lib/src/pman/id_value_map/: byte_value_impl.rs  id_value_map.rs  id_value_map_data.rs  id_value_map_data_file_handler.rs  id_value_map_local_data_handler.rs  id_value_map_s3_handler.rs  mod.rs
(+16 files in other folders)
