[package]
name = "pman_lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
uniffi = { version = "0.25", features = [ "cli" ] }
thiserror = "1.0"
rand = "0.8.5"
aes = "0.8.3"
sha2 = "0.10.8"
hmac = "0.12.1"
chacha20 = "0.9.1"
argon2 = "0.5.2"
s3cli_lib = { git = "https://github.com/sergz72/s3cli_lib.git"}
chrono = "0.4.31"

[build-dependencies]
uniffi_build = "0.25"
uniffi_bindgen = "0.25"
